# MNIST

./: CMakeLists.txt  README.md  clasifier.cpp  input.cpp  main.cpp  run.bat
model/: mnist_cnn.onnx.data
model/onnxruntime-win-x64-1.23.0/: GIT_COMMIT_ID
notebooks/: entrainement.ipynb  generer_png.ipynb
